# DESD_Group3

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  Student_Project_Contribution_Form.docx  conftest.py  db.sqlite3  docker-compose.yml  main.py  mock_data.py  pyproject.toml  pytest.ini
DESD_Group3/: .env.example  .gitignore  README.md
DESD_Group3/accounts/: models.py  urls.py
accounts/: models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_user_phone_number_customerprofile_producerprofile.py  0003_customerprofile_postcode_producerprofile_postcode.py
allergens/: admin.py
apps/accounts/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/ai_engine/: apps.py  config.py  download_models.py  urls.py  views.py
apps/allergens/: apps.py  models.py  tests.py
apps/categories/: admin.py  models.py  tests.py
apps/logistics/: tests.py  utils.py
apps/orders/: admin.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
apps/payments/: admin.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
apps/products/: forms.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
categories/: serializers.py  urls.py  views.py
core/: settings.py  urls.py
notebooks/: 01_data_annotation.ipynb  02_model_training.ipynb  02_yolov10_model_training.ipynb  03_yolov10_xai_visualization.ipynb  04_testModel.ipynb
orders/: models.py  urls.py  views.py
products/: forms.py  models.py  serializers.py  urls.py  views.py
templates/: base.html  index.html
(+144 files in other folders)
